# mnn-android-demo

HelloMNN/: settings.gradle
HelloMNN/app/: build.gradle
HelloMNN/app/src/androidTest/java/com/example/hellomnn/: ExampleInstrumentedTest.java
HelloMNN/app/src/main/: AndroidManifest.xml
HelloMNN/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloMNN/app/src/main/java/com/example/hellomnn/: MainActivity.java
HelloMNN/app/src/main/res/values/: strings.xml  themes.xml
HelloMNN/app/src/main/res/values-night/: themes.xml
HelloMNN/app/src/test/java/com/example/hellomnn/: ExampleUnitTest.java
HelloMNN/gradle/wrapper/: gradle-wrapper.properties
